--- a/app/package.json
+++ b/app/package.json
@@ -18,6 +18,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.1",
     "react-router-hash-link": "^2.4.3",
+    "react18-input-otp": "^1.1.2",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
