--- a/server/package.json
+++ b/server/package.json
@@ -16,8 +16,10 @@
     "express": "^4.18.2",
     "express-validator": "^6.14.2",
     "helmet": "^6.0.1",
+    "joi": "^17.7.0",
     "mongo": "^0.1.0",
     "mongoose": "^6.8.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "twilio": "^3.84.1"
   }
 }
