--- a/app/package.json
+++ b/app/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.1",
+    "axios": "^1.2.2",
     "faker": "^5.5.3",
     "react": "^18.2.0",
+    "react-countdown": "^2.3.5",
     "react-data-table-component": "^7.5.3",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
