--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,7 @@
     "@reduxjs/toolkit": "^1.9.1",
     "axios": "^1.2.2",
     "faker": "^5.5.3",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-countdown": "^2.3.5",
     "react-data-table-component": "^7.5.3",
@@ -21,6 +22,7 @@
     "react-router-dom": "^6.6.1",
     "react-router-hash-link": "^2.4.3",
     "react18-input-otp": "^1.1.2",
+    "redux-persist": "^6.0.0",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
